--- a/Bookish.Web/Views/Home/Library.cshtml
+++ b/Bookish.Web/Views/Home/Library.cshtml
@@ -1,5 +1,9 @@
-﻿@using PagedList.Mvc;
+﻿@using System.Web.UI.WebControls
+@using Bookish.Web.Controllers
+@using PagedList.Mvc;
 @model PagedList.PagedList<Bookish.DataAccess.DataModels.BookTitle>
+
+
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -7,15 +11,27 @@
 <div>
     @foreach (var title in Model)
     {
-        <div class="books">
-        <p>@title.Title</p>
-        <p>@title.Author</p>
-        <p>@title.Isbn</p>
-            <br />
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <p class="book-rows">Book: @title.Title</p>
+                </div>
+                <div class="col-md-3">
+                    <p class="book-rows">Author: @title.Author</p>
+                </div>
+                <div class="col-md-3">
+                    <p class="book-rows">ISBN: @title.Isbn</p>
+                </div>
+                <div class="books">
+                    @*<Button value="@title.TitleId">More Info</Button>*@
+                    @Html.ActionLink("More Info", "BookDetails", "Home", new { titleId = @title.TitleId }, null)
+                </div>
+            </div>
         </div>
     }
+</div>
     @Html.PagedListPager(Model, page => Url.Action("Library",
         new { page, pageSize = Model.PageSize}))
     showing @Model.FirstItemOnPage to @Model.LastItemOnPage
     of @Model.TotalItemCount Titles
-</div>
+
