--- a/Bookish.Web/Views/Shared/Error.cshtml
+++ b/Bookish.Web/Views/Shared/Error.cshtml
@@ -1,9 +1,9 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
+﻿@model string 
 
 @{
     ViewBag.Title = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">@Model</h2>
 
